--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "framer-motion": "^10.16.0",
+    "lottie-react": "^2.4.0",
     "next": "13.4.16",
     "postcss": "8.4.28",
     "prettier-plugin-tailwindcss": "^0.5.3",
